Update reference_framework with CV, software and control concepts

--- a/references.bib
+++ b/references.bib
@@ -248,7 +248,125 @@
     note={\url{https://sdk.rethinkrobotics.com/wiki/Workspace_Guidelines}}
 }
 
+@misc{cite_python_official_site, 
+    title={Python},
+    author="{Python Software Foundation}",
+    year={2021},
+    note={\url{https://www.python.org}}
+}
 
+@misc{cite_ROS_official_site, 
+    title={Robot Operating System},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{https://www.ros.org}}
+}
+
+@misc{cite_ROS_understanding_nodes, 
+    title={Understanding ROS Nodes},
+    author="{ROS Community}",
+    year={2019},
+    note={\url{http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes}}
+}
+
+@article{cite_computer_vision_advances_in_computers,
+    title={Computer Vision},
+    author={Azriel Rosenfeld},
+    series={Advances in Computers},
+    publisher={Elsevier},
+    volume={27},
+    pages={265-308},
+    year={1988},
+    doi={\url{https://doi.org/10.1016/S0065-2458(08)60261-2}},
+    note={\url{https://www.sciencedirect.com/science/article/pii/S0065245808602612?via=ihub}}
+}
+
+@article{cite_computer_vision_techniques_for_face_recognition,
+    title = {Techniques and Challenges of Face Recognition: A Critical Review},
+    journal = {Procedia Computer Science},
+    author = {Shilpi Singh and S.V.A.V. Prasad},
+    volume = {143},
+    pages = {536-543},
+    year = {2018},
+    note = "{8th International Conference on Advances in Computing \& Communications (ICACC-2018)}",
+    issn = {1877-0509},
+    doi = {\url{https://doi.org/10.1016/j.procs.2018.10.427}},
+    url = {\url{https://www.sciencedirect.com/science/article/pii/S1877050918321252}}
+}
+
+@misc{cite_stereoscopic_camera_techniques, 
+    title={Técnicas de visión estereoscópica para determinar la estructura tridimensional de la escena},
+    author={Montalvo M, Martín},
+    publisher="{Facultad de Informática, Universidad Complutense de Madrid}",
+    year={2010},
+    note={\url{https://eprints.ucm.es/id/eprint/11350/1/T\%C3\%A9cnicas_de_visi\%C3\%B3n_estereosc\%C3\%B3pica_para_determinar_la_estructura_tridimensional_de_al_escena.pdf}}
+}
+
+@misc{cite_photo_vuze_stereo_camera_device, 
+    title={Vuze+ 3D 360 VR Camera},
+    author="{Vuze}",
+    year={2021},
+    note={\url{https://vuze.camera/camera/vuze-plus-camera}}
+}
+
+@article{cite_position_control_for_linear_motion_servo_systems,
+    author = {Jalani, Noor Hisham and Jalani, Jamaludin and Abdullah, Jiwa},
+    year = {2008},
+    month = {12},
+    title = {POSITION CONTROL FOR LINEAR MOTION SERVO SYSTEM VIA NOMINAL CHARACTERISTIC TRAJECTORY FOLLOWING (NCTF) CONTROLLER},
+    pages = {},
+    doi = {10.13140/2.1.2668.8007},
+    note = {\url{https://www.researchgate.net/publication/267211142_POSITION_CONTROL_FOR_LINEAR_MOTION_SERVO_SYSTEM_VIA_NOMINAL_CHARACTERISTIC_TRAJECTORY_FOLLOWING_NCTF_CONTROLLER}}
+}
+
+@book{cite_centralized_control_systems_book,
+    author={Davison, Edward J. and Aghdam, Amir G. and Miller, Daniel E.},
+    title={Centralized Control Systems},
+    bookTitle={Decentralized Control of Large-Scale Systems},
+    year={2020},
+    publisher={Springer US},
+    pages={1--21},
+    isbn="978-1-4419-6014-6",
+    doi={10.1007/978-1-4419-6014-6_1},
+    url={\url{https://doi.org/10.1007/978-1-4419-6014-6_1}}
+}
+
+@book{cite_advanced_robot_control_canudas,
+    title = {Advanced Robot Control},
+    author = {Carlos Canudas},
+    isbn = {978-3-540-54169-1},
+    issn = {0170-8643},
+    series = {162},
+    year = {1991},
+    publisher = {Springer-Verlag Berlin Heidelberg},
+    keywords = {robotics},
+    note = {\url{https://www.springer.com/gp/book/9783540541691}}
+}
+
+@book{cite_mpc_industrial_processes_automation_systems,
+    title = {Industrial Process Automation Systems Design and Implementation},
+    author = {B.R. Mehta and Y.J. Reddy},
+    isbn = {978-0-12-800939-0},
+    issn = {},
+    series = {},
+    year = {2015},
+    publisher = {Elsevier Inc},
+    keywords = {automation},
+    doi = {\url{https://doi.org/10.1016/C2013-0-18954-4}},
+    note = {\url{https://www.sciencedirect.com/book/9780128009390/industrial-process-automation-systems}}
+}
+
+@book{cite_dieter_engineering_design,
+    title = {Engineering Design},
+    author = {George Dieter and Linda Schmidt},
+    isbn = {978-0073398143},
+    issn = {},
+    series = {},
+    year = {2012},
+    publisher = {Science Engineering \& Math},
+    keywords = {engineering, design},
+    note = {\url{https://www.amazon.com/-/es/George-Dieter-ebook/dp/B008K9XWQM}}
+}
 
 
 
