Update methodology with general, software and FSM architectures

--- a/references.bib
+++ b/references.bib
@@ -368,6 +368,29 @@
     note = {\url{https://www.amazon.com/-/es/George-Dieter-ebook/dp/B008K9XWQM}}
 }
 
+@misc{cite_finite_state_machine_brilliant, 
+    title={Finite State Machines},
+    author="{Brilliant.org}",
+    year={2021},
+    note={\url{https://brilliant.org/wiki/finite-state-machines/}}
+}
+
+@misc{cite_middleware_definition_talend, 
+    title={What is Middleware? Technology’s Go-to Middleman},
+    author="{Talend}",
+    year="{n.d.}",
+    note={\url{https://www.talend.com/resources/what-is-middleware/}}
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
