Update reference framework with mpc, impedance control and face-detection algorithms

--- a/references.bib
+++ b/references.bib
@@ -382,15 +382,74 @@
     note={\url{https://www.talend.com/resources/what-is-middleware/}}
 }
 
+@article{cite_face_detection_science_direct_article,
+    title = {Face Detection and Face Direction Estimation Using Color and Shape Features},
+    editor = {Eiji Arai and Tatsuo Arai and Masaharu Takano},
+    author = {YuichiAraki and NobutakaShimada and YoshiakiShirai},
+    booktitle = {Human Friendly Mechatronics},
+    publisher = {Elsevier Science},
+    address = {Amsterdam},
+    pages = {229-234},
+    year = {2001},
+    isbn = {978-0-444-50649-8},
+    doi = {https://doi.org/10.1016/B978-044450649-8/50039-5},
+    url = {\url{https://www.sciencedirect.com/science/article/pii/B9780444506498500395}}
+}
 
+@article{cite_viola_jones_face_detection_algorithm,
+    author = {Paul Viola and Michael Jones},
+    title = {Rapid object detection using a boosted cascade of simple features},
+    year = {2001},
+    doi = {10.1.1.10.6807},
+    url = {\url{https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.10.6807}}
+}
 
+@misc{cite_opencv_classifier_face_detection_general, 
+    title={Cascade Classifier},
+    author="{Open Source Computer Vision}",
+    year="{2021}",
+    note={\url{https://docs.opencv.org/4.5.2/db/d28/tutorial_cascade_classifier.html}}
+}
 
+@book{cite_canudas_theory_of_robotic_control,
+    title = {The Theory of Robot Control},
+    author = {Carlos Canudas and Bruno Siciliano and Georges Bastin (Eds)},
+    isbn = {978-1-4471-1501-4},
+    issn = {0178-5354},
+    series = {1},
+    year = {1996},
+    publisher = {Springer},
+    note = {\url{https://www.springer.com/gp/book/9781447115038}}
+}
 
+@article{cite_mass_spring_damper_system_ic,
+    title = {Simulation and Implementation of Impedance Control in Robotic Hand},
+    author = {Sergio Pertuz and Carlos Llanos and Daniel Muñoz},
+    year = {2018},
+    month = {04},
+    doi = {10.26678/ABCM.COBEM2017.COB17-2327},
+    note = {\url{https://www.researchgate.net/publication/324363084_Simulation_and_Implementation_of_Impedance_Control_in_Robotic_Hand}}
+}
 
+@book{cite_model_predictive_control_camacho_bordons,
+    title = {Model Predictive Control},
+    author = {Eduardo Camacho and Carlos Bordons},
+    isbn = {978-0-85729-398-5},
+    issn = {1439-2232},
+    doi = {10.1007/978-0-85729-398-5},
+    series = {1},
+    year = {2007},
+    publisher = {Springer-Verlag},
+    note = {\url{https://www.springer.com/gp/book/9781852336943}}
+}
 
-
-
-
+@article{cite_mpc_article_plot_thermal_control,
+    author = {Drgoňa and Ján},
+    year = {2017},
+    month = {06},
+    title = {Model Predictive Control with Applications in Building Thermal Comfort Control},
+    note = {\url{https://www.researchgate.net/publication/323219837_Model_Predictive_Control_with_Applications_in_Building_Thermal_Comfort_Control}}
+}
 
 
 
