Update methodology with HoQ

--- a/references.bib
+++ b/references.bib
@@ -451,6 +451,13 @@
     note = {\url{https://www.researchgate.net/publication/323219837_Model_Predictive_Control_with_Applications_in_Building_Thermal_Comfort_Control}}
 }
 
+@misc{cite_house_of_quality, 
+    title={The House of Quality},
+    author="{Harvard Business Review}",
+    year="{1988}",
+    note={\url{https://hbr.org/1988/05/the-house-of-quality}}
+}
+
 
 
 
